--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "deblan/csv-validator": "^3.0",
+        "doctrine/orm": "^2.7",
+        "league/csv": "^9.6",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
