--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=f44a1178c0f632f7dad5f10a2ae86a58
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/cli_product_import?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+#productImportValidationRules
+SKU_MIN_LENGTH=4
+SKU_MAX_LENGTH=16
