--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.10.99.1",
         "deblan/csv-validator": "^3.0",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "league/csv": "^9.6",
+        "ramsey/collection": "^1.1",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
@@ -16,6 +20,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
         "preferred-install": {
