refactor according to provided feedback

--- a/config/packages/dev/monolog.yaml
+++ b/config/packages/dev/monolog.yaml
@@ -5,6 +5,7 @@ monolog:
       path: "%kernel.logs_dir%/%kernel.environment%.log"
       level: debug
       channels: ["!event"]
+      buffer_size: 50 # How many messages should be saved? Prevent memory leaks
     # uncomment to get logging in your browser
     # you may have to allow bigger header sizes in your Web server configuration
     #firephp:
