--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.1"
     },
     "config": {
